--- a/portfolio-frontend/index.html
+++ b/portfolio-frontend/index.html
@@ -1,11 +1,11 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDm7CfRG_9wnCW4H0u_pEu8ZtEbkHDLi8o&libraries=places"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
+    <!-- Plus besoin de script Google Maps ici -->
   </head>
   <body>
     <div id="root"></div>
